# actix_docker

./: .gitignore  docker-compose.yml
api/: Cargo.toml  Dockerfile
api/src/: main.rs
gateways/: Cargo.toml
gateways/store/: run.sh  stop.sh
main/: Cargo.toml
